<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tMapTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
	<string name="action_search">Search</string>
	<string name="action_road">Road</string>
	<string name="action_exit">Exit</string>
</resources>
