<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tmaptest.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item 
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_connect"/>
<item 
       android:id="@+id/action_search"
       android:orderInCategory="100"
       android:showAsAction="never"
       android:title="@string/action_search"/>
  
   <item 
       android:id="@+id/action_road"
       android:orderInCategory="100"
       android:showAsAction="never"
       android:title="@string/action_road"/>
   
   <item 
       android:id="@+id/action_exit"
       android:orderInCategory="100"
       android:showAsAction="never"
       android:title="@string/action_exit"/>
    
    </menu>